--- a/setup/chapters.tex
+++ b/setup/chapters.tex
@@ -5,7 +5,7 @@
 \input{sections/Analyse/SystemDescription/EmbeddedSystemsOverview.tex}
 
 \input{sections/Analyse/PlatformChoice.tex}%NXT v. Arduino
-
+\input{sections/HWSelection/Sensors/SensorTest.tex} 
 %	Test of sensors 
 %	Motor
 %		DC v. Servo
