--- a/sections/HWSelection/Sensors/SensorTest.tex
+++ b/sections/HWSelection/Sensors/SensorTest.tex
@@ -57,6 +57,5 @@ Although this is a could be a problem, it depends on how large the
 object/objects being tracked are.
 The camera also has the ability to track up to 8 different objects. \nl
 
-The setup of the camera is quite simple and is done using a computer. It is
-setup which color it is suposed to track. The process of choosing the color is
-done 
+The setup of the camera is quite simple and is done using a computer, to setup
+which color it is suposed to track. The process of choosing the color is done 
