--- a/sections/HWSelection/Sensors/SensorTest.tex
+++ b/sections/HWSelection/Sensors/SensorTest.tex
@@ -1,7 +1,7 @@
 \section{Sensor Testing}
 To find out which sensors are the optimal sensors for the project,
 this chapter will be used to test the different sensors. The testing of the
-sensors will also be used to test how precise they are.\nl
+sensors will also be used to find out how precise they are.\nl
 
 First the testing methodology will be explained, then this methodology
 will be used to devise tests for the different sensors. 
