--- a/setup/macros.tex
+++ b/setup/macros.tex
@@ -138,7 +138,7 @@
  \autopageref{todoRefMacro}\\}
 
 \newcounter{PSCounter}
-\newcommand{\PS}{
+\newcommand{\Source}{
 \ifps
 	\label{psRefMacro}
 	\psfalse
