--- a/sections/Analyse/PlatformChoice.tex
+++ b/sections/Analyse/PlatformChoice.tex
@@ -8,9 +8,10 @@ In this chapter the two choices for hardware platforms will be presented. An ana
 \section{Lego NXT Mindstorms}
 The lego NXT Mindstorms is the successor to the first robotics-platform released by Lego the Robotics Invention System.
 Although the NXT line also contains 2 more recent platforms the NXT 2.0 and the EV3, in this project only the NXT 1.0 will be considered
-since this is the platform being offered by the university.\nl
+since this is the platform being offered by the university \Source.\nl
 The Lego NXT Mindstorms kit consists of the NXT brick and a set of compatible sensors and actuators.\nl
-The NXT brick consists of
+
+The NXT brick consists of \Source
 \begin{itemize}
   \item ARM 32-bit processor running at 48MHz with 256KB Flash storage and 64KB RAM
   \item 8-bit AVR running at 8MHz with 4KB Flash and 512B RAM
@@ -19,16 +20,18 @@ The NXT brick consists of
   \item Speaker that plays sound files with a sampling rate of 8kHz
   \item 4 input ports and 3 output ports
 \end{itemize}
+
 The Lego NXT comes with the NXT-G programming environment which is a visual programming language for use with the NXT platform.
 Although there exists a variety of unofficial programming languages for the NXT, so in practice you can write programs
-in pretty much all the big programming languages.
-Finally some pro's and con's associated with the NXT as a platform:
+in pretty much all the big programming languages\Source.
+Finally some pro's and con's associated with the NXT as a platform\Source:
 \begin{itemize}
   \item The external peripherals come programmed and assembled - all the user has to do is handle the data
   \item
 \end{itemize}
 \section{Arduino}
-The arduino was born as a tool for fast prototyping, aimed at people lacking a background in electronics and programming. Over the years the arduino has evolved from offering simple 8-bit boards to offering a variety of different boards suiting different needs such as memory available, processing power, number of ports on the platform, etc. The arduino comes with its own programming language and an IDE. A large number of modules are available for the arduino allowing the construction of diverse and complex systems.
+The arduino was born as a tool for fast prototyping, aimed at people lacking a
+background in electronics and programming. Over the years the arduino has evolved from offering simple 8-bit boards to offering a variety of different boards suiting different needs such as memory available, processing power, number of ports on the platform, etc. The arduino comes with its own programming language and an IDE. A large number of modules are available for the arduino allowing the construction of diverse and complex systems\Source.
 \begin{itemize}
 	\item Due to the popularity of the arduino platform a large variety of extern peripherals are available for the platform
 	\item Due to the popularity of the platform, there is also a large amount of prewritten libraries for use with the modules
