--- a/sections/Testing/Testing.tex
+++ b/sections/Testing/Testing.tex
@@ -19,4 +19,16 @@ consistant position to measure the angle from, a lego structure was added to the
 turrets base. As the turret is shifted in relation to the pivot point, a lego
 brick was added which connects to the pivot point and is parallel to the turret.
 This brick is used to measure the turrets angle. This setup can be seen in
-\figx{AngleTestSetup.png}{Setup for testing the turrets angle.}.
+\figx[0.13]{AngleTestSetup.png}{Setup for testing the turrets angle.}.
+
+In order to test the turrets ability to set its angle correctly, two different
+tests were used to test the most likely scenarios. The first test has the turret
+retract to its resting position before setting the angle of fireing. The second
+test has the turret set the angle of fireing without retracting to the resting
+position before the next test. For these tests the resting position is measured
+to be 5 degrees.
+
+\subsection{Results: Test 1}
+
+
+
