--- a/setup/chapters.tex
+++ b/setup/chapters.tex
@@ -13,6 +13,7 @@
 
 \part{Testing}
 \input{sections/PhysTheory/ProjectilePhysics.tex}%Physics of shooting
+\input{sections/Testing/Testing.tex}%Physics of shooting
 %Turret design choises
 %	Different itterations of the turret
 %Testing
