--- a/sections/Testing/Testing.tex
+++ b/sections/Testing/Testing.tex
@@ -29,6 +29,12 @@ position before the next test. For these tests the resting position is measured
 to be 5 degrees.
 
 \subsection{Results: Test 1}
+This test had the turret retract to its resting position before setting its
+angle of fire. Below will be presented the data from a single data set. The rest
+of the data can be found in \autoref{}.
+
+
+
 
 
 
