- Added graph marco

--- a/setup/macros.tex
+++ b/setup/macros.tex
@@ -247,6 +247,19 @@ rettes} \autopageref{retRefMacro}\\}
 \end{figure}
 }
 
+\newcommand{\graph}[4]{
+\begin{figure}
+\centering
+\begin{tikzpicture}
+	\begin{axis}[xlabel={$#1$}, ylabel={$#2$}, ylabel style={rotate=270}, xmin=0,
+	ymin=0, minor tick num = 3, /pgfplots/grid = both, axis lines = left] \addplot
+	table {graphData/#3.dat};
+	\end{axis}
+\end{tikzpicture}
+\caption{#4}
+\end{figure}
+}
+
 \newcounter{def}
 \renewcommand{\thedef}{definition \thechapter.\arabic{def}}
 \newenvironment{defi}[1]{%
