Næsten færdig med platformchoice - ingen kilder DonF

--- a/sections/Analyse/PlatformChoice.tex
+++ b/sections/Analyse/PlatformChoice.tex
@@ -24,13 +24,39 @@ Although there exists a variety of unofficial programming languages for the NXT,
 in pretty much all the big programming languages.
 Finally some pro's and con's associated with the NXT as a platform:
 \begin{itemize}
-  \item The external peripherals come programmed and assembled - all the user has to do is handle the data
-  \item
+  \item The external peripherals come programmed and assembled - all the user has to do is handle the data received by the NXT brick
+  \item The NXT can be combined with Lego Technics to use as a building platform. This makes construction much simpler since you have
+  an already existing blocks to compose a construction as opposed to having to manifacture your own mechanical parts.
+  \item Very limited amount of I/O ports
+  \item Typically more expensive
 \end{itemize}
 \section{Arduino}
-The arduino was born as a tool for fast prototyping, aimed at people lacking a background in electronics and programming. Over the years the arduino has evolved from offering simple 8-bit boards to offering a variety of different boards suiting different needs such as memory available, processing power, number of ports on the platform, etc. The arduino comes with its own programming language and an IDE. A large number of modules are available for the arduino allowing the construction of diverse and complex systems.
+The arduino was born as a tool for fast prototyping, aimed at people lacking a background in electronics and programming.
+Over the years the arduino has evolved from offering simple 8-bit boards to offering a variety of different boards suiting
+different needs such as memory available, processing power, number of ports on the platform, etc. The arduino comes with its own programming language and an IDE. A large number of modules are available for the arduino allowing the construction of diverse and complex systems.
 \begin{itemize}
 	\item Due to the popularity of the arduino platform a large variety of extern peripherals are available for the platform
 	\item Due to the popularity of the platform, there is also a large amount of prewritten libraries for use with the modules
 	\item If the library doesn't exist or contain the necesary functionality, it will have to be written, thus time will have to be invested in order to make it work
 \end{itemize}
+
+
+\section{Summary}
+Based on a set of criteria the two prototyping platforms will be evaluated, and in conclusion a platform will be selected.
+
+\begin{enumerate}
+  \item Cost - in this regard the Arduino wins since it is much cheaper on both the platform and the peripherals
+  \item I/O ports - The Arduino wins again since not only does it far surpass the NXT in number of available ports,
+  but also allows flexibility in whether the ports are input or output and analog or digital.
+  \item Processing power - When talking about the brain power of the two platforms, the NXT is superior. Although one has to
+  keep in mind that the Arduino offers a selection of boards with varying processors and memory, allowing us to select the arduino
+  board that suits our needs best. In reality if one of the more powerful arduino boards is chosen the difference in processor-speed and memory
+  would be neglible.
+  \item Availability - The Arduino offers a far wider selection of extern peripherals than the NXT, although everything is produced by a 3rd party manufacturer.
+  \item Integration of modules - The Lego NXT peripherals are built and configured to be used with a Lego NXT brick, thus resulting in a much simpler
+  and streamlined process being almost plug-and-play. The Arduino often requires more work in regards to integrating the modules with the board.
+  \item Customization - Based on this criteria the Arduino is considered to be more flexible, because of the more widespread use of Arduino's, the likelyhood of someone
+  already having constructed what you need is big. There is also the option for tampering further with the modules with a breadboard and the electrical components such as resistors, capacitors, etc.
+  \item Building - In this regard the NXT wins big, since it can be combined with the entire Lego Technics system in constructing a technical platform. Constructing a turret with arduino would
+  require us to manufacture the parts necessary for the cannon. The Lego also has the advantage that the various pieces can be combined in a lot of ways, allowing change in the design without necessarily needing new parts.  
+\end{enumerate}
