--- a/sections/HWSelection/Sensors/SensorTest.tex
+++ b/sections/HWSelection/Sensors/SensorTest.tex
@@ -16,12 +16,17 @@ difference between the experiments are the size of the object being tracked and
 whether the sensor is shielded or not. The different object sizes was tested
 with a shielded sensor and a non shielded sensor. \nl
 
-% \begin{tikzpicture}
-%   \begin{axis}[xlabel={$x$}, ylabel={$y$}, ylabel style={rotate=270}, xmin=0,
-%   ymin=0, minor tick num = 3, /pgfplots/grid = both, axis lines = left] \addplot
-%   table {graphData/test1.dat};
-%   \end{axis}
-% \end{tikzpicture}
+\begin{figure}
+\centering
+\begin{tikzpicture}
+  \begin{axis}[xlabel={Measured distance}, ylabel={Actual distance}, xmin=0,
+  ymin=0, minor tick num = 3, /pgfplots/grid = both, axis lines = left] 
+  \addplot[green, mark=*] table {graphData/sensorShielded1.dat};
+  \addplot[blue, mark=*] table {graphData/sensorShielded3.dat};
+  \end{axis} 
+\end{tikzpicture}
+\caption{Results with a shielded sensor and a box h. 14.2cm and w. 9cm}
+\end{figure}
 
 This sensor has a range of 0 to 255 cm and will not be too limiting in terms of
 how far the object can be from the canon. 
