--- a/setup/chapters.tex
+++ b/setup/chapters.tex
@@ -3,6 +3,8 @@
 
 \part{Analysis}
 \input{sections/Analyse/SystemDescription/EmbeddedSystemsOverview.tex}
+\input{sections/Analyse/SystemDescription/MI.tex}
+
 
 \input{sections/Analyse/PlatformChoice.tex}%NXT v. Arduino
 \input{sections/HWSelection/Sensors/SensorTest.tex} 
