remove conflict and merge gitignore

--- a/sections/Analyse/PlatformChoice.tex
+++ b/sections/Analyse/PlatformChoice.tex
@@ -68,5 +68,8 @@ Based on a set of criteria the two prototyping platforms will be evaluated, and 
 Since the university provides the platforms the cost aspect isn't deemed as a vital factor. As mentioned before the parts needed for the project
 are available for both platforms so this is not the deciding factor either. When choosing the platform the group focused on the following criteria:
 
--Building - Since a physical turret will have to be constructed, the building part of the project is deemed a 
--Integration of modules
+-Building - Since a physical turret will have to be constructed, in order to simplify the mechanical process and allowing further focus on the software aspect.
+-Integration of modules - As before, the group doesn't want to spend too much time on the physical aspect of construction so things like soldering and integration of modules
+is inconvenient.
+-I/O Ports - the number of available I/O Ports needs to be able to support a range of sensors and some motors. For this reason the NXT is a little limiting,
+compared to the arduino, although the use of a multiplexer can allow expansion of existing ports.
