Finish platform choice minus sources

--- a/sections/Analyse/PlatformChoice.tex
+++ b/sections/Analyse/PlatformChoice.tex
@@ -68,8 +68,18 @@ Based on a set of criteria the two prototyping platforms will be evaluated, and 
 Since the university provides the platforms the cost aspect isn't deemed as a vital factor. As mentioned before the parts needed for the project
 are available for both platforms so this is not the deciding factor either. When choosing the platform the group focused on the following criteria:
 
--Building - Since a physical turret will have to be constructed, in order to simplify the mechanical process and allowing further focus on the software aspect.
+-Building - Since a physical turret will have to be constructed, in order to simplify the mechanical process and allowing further focus on the software aspect.\nl
 -Integration of modules - As before, the group doesn't want to spend too much time on the physical aspect of construction so things like soldering and integration of modules
-is inconvenient.
+is inconvenient.\nl
 -I/O Ports - the number of available I/O Ports needs to be able to support a range of sensors and some motors. For this reason the NXT is a little limiting,
 compared to the arduino, although the use of a multiplexer can allow expansion of existing ports.
+
+In conclusion the group has chosen the Lego NXT platform for use in the project based on the following criteria:
+\begin{itemize}
+  \item Easier to physically build a prototype with lego parts
+  \item Availability of the modules or cost of the platform isn't really a factor, since they both suit the needs of the project.
+  \item Less time spend on module integration and more time on software
+\end{itemize}
+
+Now the platform choices have been analysed in regards to the project and a platform was selected. In the next chapter,
+the available sensors will be described, analysed and tested in order to select the most ideal sensor for the project.
