fix platform choice and add a bit in embedded

--- a/sections/Analyse/PlatformChoice.tex
+++ b/sections/Analyse/PlatformChoice.tex
@@ -43,12 +43,12 @@ different needs such as memory available, processing power, number of ports on t
 	\item If the library doesn't exist or contain the necesary functionality, it will have to be written, thus time will have to be invested in order to make it work
 \end{itemize}
 
-\section{Summary}
+\section{Platform comparison}
 Based on a set of criteria the two prototyping platforms will be evaluated, and in conclusion a platform will be selected.
 
 \begin{enumerate}
   \item Cost - in this regard the Arduino wins since it is much cheaper on both the platform and the peripherals. But since the project is planning to use
-  the
+  the platforms provided by the university, cost is not an issue.
   \item I/O ports - The Arduino wins again since not only does it far surpass the NXT in number of available ports,
   but also allows flexibility in whether the ports are input or output and analog or digital.
   \item Processing power - When talking about the brain power of the two platforms, the NXT is superior. Although one has to
