--- a/sections/Analyse/SystemDescription/EmbeddedSystemsOverview.tex
+++ b/sections/Analyse/SystemDescription/EmbeddedSystemsOverview.tex
@@ -12,7 +12,8 @@ but a crude definition\citep[ch.1.1]{vahid1999embedded} is:\nl
 \textit{An  embedded  system  is  nearly  any computing system other than a desktop,
 laptop, or  mainframe  computer.}\nl
 
-This means that embedded systems cover alot of different types of computers.
+This means that embedded systems cover alot of different types of computers, for example
+the ABS-brakes in a modern car, the cash registers in stores, washing machines, etc.
 Their requirements can therefore differ alot between systems, although they do
 share some characteristics:
 
@@ -38,12 +39,12 @@ it may be dropped.}
 
 
 
-% 
-% 
+%
+%
 % Although is definition is very crude, it at least gives a starting point from
 % which embedded systems can be observed. By examining some common types of
 % embedded systems we can try to further understand these systems.\nl
-% 
+%
 % So what are embedded systems. These can be found in a variety of different
 % electronic devices such as \begin{itemize}
 % \item Consumer electronics - One of the obvious categories in calculators,
@@ -59,12 +60,12 @@ it may be dropped.}
 % control etc.
 % \end{itemize}
 % \nl
-% 
+%
 % So, we are in fact surrounded by embedded systems of different types in our
 % modern lives.
-% 
+%
 % Most embedded systems also share a couple of key characteristics:
-% 
+%
 % \begin{enumerate}
 %   \item Single-functioned - Most embedded systems have a single function ie.
 %   the same program that executes again and again, for example a Washing
@@ -92,23 +93,23 @@ it may be dropped.}
 % Typical Embedded SYstems - components, microprocessor???
 % Reliability
 % Limited Resources(memory, cpu, power consumption etc)
-% 
-% 
-% 
-% 
-% 
-% 
+%
+%
+%
+%
+%
+%
 % Coming up with an exact definition of an embedded system is a hard task, but
 % \citep{vahid1999embedded} gives a crude definition of a Embedded System as
 % follows: \nl
-% 
+%
 % An  embedded  system  is  nearly  any computing system other than a desktop,
 % laptop, or  mainframe  computer.
-% 
+%
 % Although is definition is very crude, it at least gives a starting point from
 % which embedded systems can be observed. By examining some common types of
 % embedded systems we can try to further understand these systems.\nl
-% 
+%
 % So what are embedded systems. These can be found in a variety of different
 % electronic devices such as \begin{itemize}
 % \item Consumer electronics - One of the obvious categories in calculators,
@@ -124,12 +125,12 @@ it may be dropped.}
 % control etc.
 % \end{itemize}
 % \nl
-% 
+%
 % So, we are in fact surrounded by embedded systems of different types in our
 % modern lives.
-% 
+%
 % Most embedded systems also share a couple of key characteristics:
-% 
+%
 % \begin{enumerate}
 %   \item Single-functioned - Most embedded systems have a single function ie.
 %   the same program that executes again and again, for example a Washing
@@ -157,20 +158,20 @@ it may be dropped.}
 % Typical Embedded SYstems - components, microprocessor???
 % Reliability
 % Limited Resources(memory, cpu, power consumption etc)
-% 
-% 
+%
+%
 % This section will be used to give an give an overview of how machine
 % intelligence and real-time systems will be used and what an embedded system
 % is.\\
-% 
+%
 % A embedded system is a device with limited resources both in terms of computer
 % power and how much memory it has \PS. They are used everywhere to do small task
 % and jobs \PS.\\
-% 
+%
 % When working with a embedded system there are different problems to overcome
 % when it comes to how the software needs to be programed and how to work with the
 % limited resources of the system \PS.\\
-% 
+%
 % % small devices everywhere doing their very own job, having access to limited
 % % memory and little computing power.
 % % Comes with its own mix of software, hardware and mechanical parts.
